maquetacion del content

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
 
         <!-- Content  -->
 
+        <article class="content">
+            <h1 class="content__claim">Service Industry IT</h1>
+            <h2 class="content_subclaim">The IT sector is a field that is experiencing accelerated evolution and is transforming the shape of Indian business standards. Companies in this business provide services such as computer systems design, software support, and data management, etcThe IT sector is a field that is experiencing accelerated evolution and is transforming the shape of Indian business standards. Companies in this business provide services such as computer systems design, software support, and data management, etc</h2>
+            <li class="menu-list__item"><a class="book-appointment" href="#">Contact Us</a></li>
+        </article>
+
         <!-- Footer -->
     </main>
     
