maquetacion del footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Automotive</title>
+    <title>MDtechCA</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
@@ -40,6 +40,23 @@
         </article>
 
         <!-- Footer -->
+
+        <footer class="footer">
+            <section class="footer__widget">
+                <h3 class="footer__widget__title">Our Location</h3>
+                <p class="footer__widget__text">Venezuela</p>
+            </section>
+
+            <section class="footer__widget">
+                <h3 class="footer__widget__title">Phone</h3>
+                <p class="footer__widget__text">+58 04120446832</p>
+            </section>
+
+            <section class="footer__widget">
+                <h3 class="footer__widget__title">Email</h3>
+                <p class="footer__widget__text">mdtechca@mdteach.com</p>
+            </section>
+        </footer>
     </main>
     
 </body>
