se empieza a dar estilos

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/logomdtech3.png">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/main.js" defer></script>
 </head>
@@ -15,9 +16,10 @@
 
     <main class="container">
         <!-- Header  -->
-        <header>
+        <header class="header">
             <a href="#" class="logo">
-                <img src="img/logomdtech.svg" alt="mdtech">
+                <img class="logo__img" src="img/logomdtech3.png" width="50px" height="50px" alt="mdtech">
+                MDtechCA
             </a>
 
             <nav class="menu">
